--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
       - NODE_ENV=development
       - PORT=5000
       - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/main
+      - PASSWORD_HASH=73l8gRjwLftklgfdXT+MdiMEjJwGPVMsyVxe16iYpk8=
     ports:
       - 5000:5000
       - 9229:9229
