--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,6 +7,7 @@ services:
       - PORT=5000
       - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/main
       - PASSWORD_HASH=73l8gRjwLftklgfdXT+MdiMEjJwGPVMsyVxe16iYpk8=
+      - SECRET_KEY=this_has_to_be_super_secret
     ports:
       - 5000:5000
       - 9229:9229
